--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="app">
     <head>
         <meta charset="utf-8" />
         <title>Recipe Hub</title>
         <script src="../bower_components/angular/angular.min.js"></script>
+        <script src="../app/app.js"></script>
     </head>
     <body>
         <h1>Recipe Hub</h1>
         <p>Welcome to Recipe Hub, {{2 + 2}}</p>
+        <div ng-controller="showAllRecipes as showCtrl">
+            <h3>All Recipes:</h3>
+            <ul>
+                <li ng-repeat="recipe in showCtrl.recipe_list">{{recipe.recipe_name}}</li>
+            </ul>
+        </div>
     </body>
 </html>
