--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Recipe Hub</title>
-        <script src="../bower_components/angular/angular.min.js"></script>
-        <script src="../app/app.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
         <h1>Recipe Hub</h1>
@@ -12,7 +12,7 @@
         <div ng-controller="showAllRecipes as showCtrl">
             <h3>All Recipes:</h3>
             <ul>
-                <li ng-repeat="recipe in showCtrl.recipe_list">{{recipe.recipe_name}}</li>
+                <li ng-repeat="recipe in showCtrl.recipe_list">{{recipe.recipe_name}}<span style="font-size:12px;color:#666666;">, {{recipe.meal_type}}</span></li>
             </ul>
         </div>
     </body>
