--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,28 @@
         <script src="js/app.js"></script>
     </head>
     <body>
+        <nav class="navbar navbar-default navbar-static-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#golbal-navigation">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">cookhook.com</a>
+                </div>
+                <div class="collapse navbar-collapse" id="golbal-navigation">
+                  <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#view_all">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#create_new">Add Recipe</a>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+        </nav>
         <h1>Recipe Hub</h1>
         <p>Welcome to Recipe Hub</p>
         <div ng-controller="showAllRecipes as showCtrl">
