--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
                 <div class="collapse navbar-collapse" id="golbal-navigation">
                   <ul class="nav navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active" href="#view_all">Home</a>
+                      <a class="nav-link active" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#view_all">View All</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#create_new">Add Recipe</a>
