--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
         <script src="js/app.js"></script>
     </head>
     <body>
+        
         <nav class="navbar navbar-default navbar-static-top" role="navigation">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#golbal-navigation">
                     <span class="icon-bar"></span>
@@ -34,20 +35,7 @@
                 </div>
             </div>
         </nav>
-        <h1>Recipe Hub</h1>
-        <p>Welcome to Recipe Hub</p>
-        <div ng-controller="showAllRecipes as showCtrl">
-            <h3>All Recipes:</h3>
-            <input type="button" value="View All Recipes" ng-click="showCtrl.getAllRecipes()"/>
-            <ul>
-                <li ng-repeat="recipe in showCtrl.recipe_list">{{recipe.name}}</li>
-            </ul>
-        </div>
-        <li><a href="#create_new">Create New</a></li>
-        <li><a href="#view_all">View All</a></li>
-        <!-- Dynamic Content will be injected here -->
-        <div ng-view>
-        
-        </div>
+        <!-- Dynamic Views -->
+        <div class="container" ng-view></div>
     </body>
 </html>
