--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8" />
         <title>Recipe Hub</title>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/create_new_recipe.css"/>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body>
-        
+        <!-- Begin Navigation Bar -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
