--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#create_new">Add Recipe</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#add_ingredients">Add Ingredients</a>
+                    </li>
                   </ul>
                 </div>
             </div>
