--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <title>Recipe Hub</title>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/create_new_recipe.css"/>
+        <link rel="stylesheet" type="text/css" href="css/core.css" />
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         <script src="js/app.js"></script>
