UI upgrade for add ingredients view

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8" />
         <title>Recipe Hub</title>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+        <!-- Stylesheetes -->
         <link rel="stylesheet" type="text/css" href="css/create_new_recipe.css"/>
+        <link rel="stylesheet" type="text/css" href="css/add_ingredient.css" />
         <link rel="stylesheet" type="text/css" href="css/core.css" />
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
