work in progress for add ingredients

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="css/create_new_recipe.css"/>
         <link rel="stylesheet" type="text/css" href="css/add_ingredient.css" />
         <link rel="stylesheet" type="text/css" href="css/core.css" />
+        <!-- Scripts  -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         <script src="js/app.js"></script>
